# crewai

crewAI-enterprise-sales-pdf-template-main/: README.md  pyproject.toml
crewAI-enterprise-sales-pdf-template-main/src/sales_pdf/: crew.py  main.py
crewAI-enterprise-sales-pdf-template-main/src/sales_pdf/config/: agents.yaml  tasks.yaml
