[project]
name = "sales_pdf"
version = "0.1.0"
description = "sales-pdf using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "markdown-pdf>=1.3",
]

[project.scripts]
sales_pdf = "sales_pdf.main:run"
run_crew = "sales_pdf.main:run"
train = "sales_pdf.main:train"
replay = "sales_pdf.main:replay"
test = "sales_pdf.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
